--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <script src="http://d3js.org/d3.v3.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/pie.js"></script>
   </head>
 <body>
   <div class="container">
     <div class="row">
       <section id="content" class="col-md-12"></section>
+    </div>
+    <div class="row">
+      <section id="pie" class="col-md-12"></section>
     </div>
   </div>
 </body>
